# libmw

./: CMakeLists.txt  Doxyfile  README.adoc
.github/workflows/: build.yml
crypto/: CMakeLists.txt
crypto/src/: crypto.cpp  crypto_test.cpp
designs/: design-1.md  design-2.md  design-3-address-filter.md  design-4-sqlite-busy.md  design-5-error.md  design-6-async.md
http-server/: CMakeLists.txt  auth.cpp  auth_test.cpp  http_server.cpp  http_server_test.cpp
includes/mw/: auth.hpp  auth_mock.hpp  crypto.hpp  crypto_mock.hpp  database.hpp  error.hpp  exec.hpp  http_client.hpp  http_client_async.hpp  http_client_async_mock.hpp  http_client_mock.hpp  http_server.hpp  task.hpp  test_utils.hpp  url.hpp  utils.hpp
sqlite/: CMakeLists.txt
sqlite/src/: database.cpp  database_test.cpp
src/: database.cpp  exec.cpp  exec_test.cpp  http_client.cpp  http_client.hpp  http_client_test.cpp  url.cpp  utils.cpp  utils_test.cpp
url/: CMakeLists.txt
url/src/: http_client.cpp  http_client_async.cpp  http_client_async_test.cpp  http_client_test.cpp  url.cpp  url_test.cpp
